Concrete Strength Prediction using Neural Networks

--- a/Concrete_Strength_Prediction_using_Neural_Networks.ipynb
+++ b/Concrete_Strength_Prediction_using_Neural_Networks.ipynb
@@ -385,7 +385,7 @@
       ],
       "source": [
         "# Load dataset\n",
-        "data = pd.read_csv('/content/drive/MyDrive/Dataset/concrete_data.csv')\n",
+        "data = pd.read_csv('............./concrete_data.csv')\n",
         "X = data.drop('Strength', axis=1)\n",
         "y = data['Strength']\n",
         "data.head()"
